# i-see-things

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  almost_always_auto.cpp  alternate_bit_opers.cpp  compile_flags.txt  const_ptr.cpp  deduction_guides.cpp  file.cpp  link.cpp  movesemantic.cpp  pod_copy_check.cpp  smart_ptr_get.cpp  template.cpp  test.cpp  vector.cpp
001_decltype_auto/: CMakeLists.txt  main.cpp
002_recursive_lock/: CMakeLists.txt  main.cpp  object.cpp  object.h
003_modules/: Makefile
SFINAE/: CMakeLists.txt  main.cpp  old_sfinae.h
cdeclaration/: main.c
cppcoro/: CMakeLists.txt  README.md  generator.cpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main5_straight.cpp  resumeable.cpp
cppcorohandmade/: Makefile  main.cpp
euclid-template/: CMakeLists.txt  euclid.h  euclid_enable_if.h  local_math.h  test.cpp
file_io/src/: test.cpp  text_read.cpp
filesystem/src/: common.h  file.cpp  main.cpp  string_mnp.cpp
foo_arg_reverse/: main.cpp
inferred/: a.out  main.cpp
inheritance/: CMakeLists.txt  override.cpp  simple_inheritance.cpp  three_ancestor.cpp
initialization/: main.cpp
junior_example/: CMakeLists.txt  main.cpp
matrix/: CMakeLists.txt  main.cpp  matrix.h
matrix_clang/: .clang-format  CMakeLists.txt  compile_flags.txt  main.c  matrix.c  matrix.h
modules/: mtrx3.cpp  test.cpp  vec3.cpp
movesemantic/: common.h  rvalue.cpp
placeholder_variable/: CMakeLists.txt  main.cpp
power_of_two/: main.cpp
scope_aware_thread/: CMakeLists.txt  main.cpp  scope_aware_thread.h
smart_ptr/: smart_ptr.cpp  smart_ptr.h  test.cpp
template_syntax/: CMakeLists.txt  struct_decl.h  test.cpp
threads/: threads.cpp
tiny-render/image/: bitmap.h  canvas.h
toy_containers/: vector.h
type_show/: bad.cpp  compile_error.cpp  inferred.cpp  pretty_function.cpp  type2type.cpp
