cmake_minimum_required(VERSION 3.20)

set(LIBS )

add_executable(main main.cpp)
add_executable(main2 main2.cpp)
add_executable(main3 main3.cpp)
add_executable(main4 main4.cpp)
add_executable(main5 main5.cpp)
add_executable(main5_straight main5_straight.cpp)
add_executable(resumeable resumeable.cpp)
add_executable(generator generator.cpp)
